--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -3,7 +3,7 @@ name: 'Terraform'
 on:
   pull_request:
     types:
-      - closed
+      - opened
     branches:
       - master
 
@@ -22,10 +22,10 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v4.1.1
+        uses: actions/checkout@v2
 
       - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2.0.3
+        uses: hashicorp/setup-terraform@v1.5.2
         with:
           cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
@@ -39,5 +39,7 @@ jobs:
         run: terraform plan -input=false
 
       - name: Terraform Apply
-        if: github.event.pull_request.merged == true
-        run: terraform apply -auto-approve -input=false
+        run: terraform apply -auto-approve
+
+      - name: Terraform Destroy
+        run: terraform destroy
