--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -34,10 +34,10 @@ jobs:
         run: terraform init
 
       - name: Terraform Format
-        run: terraform fmt -check
+        run: terraform fmt
 
       - name: Terraform Plan
-        run: terraform plan -input=false
+        run: terraform plan
 
       - name: Terraform Apply
         run: terraform apply -auto-approve
